# siglent-visa

./: README.md  __init__.py  factory.py  pyproject.toml  requirements.txt  setup.py  test_sdg1000.py  visa_instruments.py
sdg1000/: __init__.py  sdg1000_instrument.py
sdg2000x/: __init__.py  sdg2000x_instrument.py  test_sdg2000x.py  visa_instruments.py
